--- a/tickets/templates/ticketDetails.html
+++ b/tickets/templates/ticketDetails.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -184,7 +185,7 @@
                                     <div class="text-[#8c7e5a] flex border-none bg-[#f1efe9] items-center justify-center pl-4 rounded-l-xl border-r-0">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"></path></svg>
                                     </div>
-                                    <input type="search" placeholder="Search" class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#191610] focus:outline-0 focus:ring-0 border-none bg-[#f1efe9] focus:border-none h-full placeholder:text-[#8c7e5a] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal">
+                                    <input type="search" id="header-search-input-ticket-details" placeholder="Search" class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#191610] focus:outline-0 focus:ring-0 border-none bg-[#f1efe9] focus:border-none h-full placeholder:text-[#8c7e5a] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal">
                                 </div>
                             </label>
                             <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCClaZNla2VNHXuP4EEYYlG4LkZLwYibWSxw8yzb3jGydK81D_AXUYkIFyinil-dc9nLIixSFYOYTnTHhPAgW7Rgol2xKBCRitPsQZieVpCouNpxeaDA1OI7g0YrTegaV3O8LYbFYa020XTuVl2BUh_ogXINAaMYgvy-Qf1gW_EwpSjARgbbgSpHrUHu2-NSkSyN6Hsnj4AV2VMoOKK1uqlaP9nCYh3DoUd0lAswDohEnIfDQFAkaDKUBLhl05fMAHKUp8zap8Bqv4")'></div>
@@ -1885,4 +1886,14 @@ document.addEventListener('DOMContentLoaded', function() {
     });
   }
 });
+
+// Initialize Global Search
+document.addEventListener('DOMContentLoaded', function() {
+    new GlobalSearch('header-search-input-ticket-details');
+});
 </script>
+
+<!-- Global Search JavaScript -->
+<script src="{% static 'projects/js/global_search.js' %}?v=2"></script>
+</body>
+</html>
